--- a/static/index.html
+++ b/static/index.html
@@ -50,6 +50,7 @@
             border: 2px dashed #93c5fd;
             border-radius: 12px;
             background: #f8fafc;
+            color: #0f172a;
         }
 
         input[type="file"] {
@@ -114,6 +115,7 @@
             margin-top: 32px;
             padding-top: 32px;
             border-top: 1px solid #e2e8f0;
+            color: #1f2937;
         }
 
         .chat-entry {
