--- a/static/index.html
+++ b/static/index.html
@@ -107,6 +107,7 @@
             padding: 12px;
             font-size: 1rem;
             resize: vertical;
+            color:#0f172a;
             background: #ffffff;
             box-sizing: border-box;
         }
